# anime-identify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python_test.yml
src/anime_identify/: __init__.py
tests/: test_anime.py
